# ros-practice-kiosk

./: CMakeLists.txt  README.md  chief.py  client.py  kiosk.py  package.xml  setup.py
msg/: Order.msg
nodes/kiosk/: kiosk.py
